package dk.dagensoel.entities;

/**
 * Purpose:
 *
 * @Author: Anton Friis Stengaard
 */
public enum VoteType {
    FAVORITE,
    SECOND
}

